--- a/source/texk/web2c/luatexdir/am/luatex.am
+++ b/source/texk/web2c/luatexdir/am/luatex.am
@@ -1,170 +1,169 @@
-## texk/web2c/luatexdir/am/luatex.am: Makefile fragment for luaTeX.
+## texk/web2c/luatexdir/am/luamktex.am: Makefile fragment for LuaMKTeX.
 ##
 ## Copyright 2015-2018 LuaTeX team
 ## Copyright 2009-2015 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 
-## LuaTeX and LuaJITTeX
+## LuaMKTeX and LuaJITMKTeX
 ##
-if LUATEX
-bin_PROGRAMS += luatex
+if LUAMKTEX
+bin_PROGRAMS += luamktex
 if WIN32
-noinst_PROGRAMS += call_luatex
-install_exe_links += install-luatex-links
-uninstall_exe_links += uninstall-luatex-links
+noinst_PROGRAMS += call_luamktex
+install_exe_links += install-luamktex-links
+uninstall_exe_links += uninstall-luamktex-links
 else !WIN32
-bin_links += luatex$(EXEEXT):texlua luatex$(EXEEXT):texluac
+bin_links += luamktex$(EXEEXT):texmklua luamktex$(EXEEXT):texmkluac
 endif !WIN32
-endif LUATEX
+endif LUAMKTEX
 
-#if LUATEX53
-#bin_PROGRAMS += luatex53
+#if LUAMKTEX53
+#bin_PROGRAMS += luamktex53
 #if WIN32
-#noinst_PROGRAMS += call_luatex53
-#install_exe_links += install-luatex53-links
-#uninstall_exe_links += uninstall-luatex53-links
+#noinst_PROGRAMS += call_luamktex53
+#install_exe_links += install-luamktex53-links
+#uninstall_exe_links += uninstall-luamktex53-links
 #else !WIN32
-#bin_links += luatex53$(EXEEXT):texlua53
+#bin_links += luamktex53$(EXEEXT):texmklua53
 #endif !WIN32
-#endif LUATEX53
+#endif LUAMKTEX53
 
-if LUAJITTEX
-bin_PROGRAMS += luajittex
+if LUAJITMKTEX
+bin_PROGRAMS += luajitmktex
 if WIN32
-noinst_PROGRAMS += call_luajittex
-install_exe_links += install-luajittex-links
-uninstall_exe_links += uninstall-luajittex-links
+noinst_PROGRAMS += call_luajitmktex
+install_exe_links += install-luajitmktex-links
+uninstall_exe_links += uninstall-luajitmktex-links
 else !WIN32
-bin_links += luajittex$(EXEEXT):texluajit luajittex$(EXEEXT):texluajitc
+bin_links += luajitmktex$(EXEEXT):texmkluajit luajitmktex$(EXEEXT):texmkluajitc
 endif !WIN32
-endif LUAJITTEX
+endif LUAJITMKTEX
 
-#EXTRA_PROGRAMS += luatex luatex53 luajittex
-EXTRA_PROGRAMS += luatex luajittex
+#EXTRA_PROGRAMS += luamktex luamktex53 luajitmktex
+EXTRA_PROGRAMS += luamktex luajitmktex
 
 # Force Automake to use CXXLD for linking
-nodist_EXTRA_luatex_SOURCES = dummy.cxx
-#nodist_EXTRA_luatex53_SOURCES = dummy.cxx
-nodist_EXTRA_luajittex_SOURCES = dummy.cxx
+nodist_EXTRA_luamktex_SOURCES = dummy.cxx
+#nodist_EXTRA_luamktex53_SOURCES = dummy.cxx
+nodist_EXTRA_luajitmktex_SOURCES = dummy.cxx
 
-luatex_preflags = $(AM_CPPFLAGS) $(ZLIB_INCLUDES) $(LIBPNG_INCLUDES) $(HARFBUZZ_INCLUDES)
-luatex_postflags = -I$(srcdir)/libmd5 -DpdfTeX -I$(srcdir)/luatexdir -I$(srcdir)/mplibdir
-luatex_postflags += -Dextra_version_info=`date +-%Y%m%d%H`
-luatex_postflags += -I$(srcdir)/synctexdir -DSYNCTEX_ENGINE_H='<synctex-luatex.h>'
+luamktex_preflags = $(AM_CPPFLAGS) $(ZLIB_INCLUDES) $(LIBPNG_INCLUDES) $(HARFBUZZ_INCLUDES)
+luamktex_postflags = -I$(srcdir)/libmd5 -DpdfTeX -I$(srcdir)/luatexdir -I$(srcdir)/mplibdir
+luamktex_postflags += -Dextra_version_info=`date +-%Y%m%d%H`
+luamktex_postflags += -I$(srcdir)/synctexdir -DSYNCTEX_ENGINE_H='<synctex-luatex.h>'
 
-luatex_CPPFLAGS = $(luatex_preflags) $(LUA_INCLUDES) $(luatex_postflags)
-#luatex53_CPPFLAGS = $(luatex_preflags) $(LUA_LUA53_INCLUDES) $(luatex_postflags)
-luajittex_CPPFLAGS = $(luatex_preflags) $(LUAJIT_INCLUDES) $(LUAJIT_DEFINES) $(luatex_postflags)
-luajittex_CPPFLAGS += -DLuajitTeX
+luamktex_CPPFLAGS = $(luamktex_preflags) $(LUA_INCLUDES) $(luamktex_postflags)
+#luamktex53_CPPFLAGS = $(luamktex_preflags) $(LUA_LUA53_INCLUDES) $(luamktex_postflags)
+luajitmktex_CPPFLAGS = $(luamktex_preflags) $(LUAJIT_INCLUDES) $(LUAJIT_DEFINES) $(luamktex_postflags)
+luajitmktex_CPPFLAGS += -Dluajitmktex
 
-luatex_CXXFLAGS = $(WARNING_CXXFLAGS)
-#luatex53_CXXFLAGS = $(WARNING_CXXFLAGS)
-luajittex_CXXFLAGS = $(WARNING_CXXFLAGS)
+luamktex_CXXFLAGS = $(WARNING_CXXFLAGS)
+#luamktex53_CXXFLAGS = $(WARNING_CXXFLAGS)
+luajitmktex_CXXFLAGS = $(WARNING_CXXFLAGS)
 
-luatex_LDFLAGS = -export-dynamic
-#luatex53_LDFLAGS = -export-dynamic
-luajittex_LDFLAGS = -export-dynamic $(LUAJIT_LDEXTRA)
+luamktex_LDFLAGS = -export-dynamic
+#luamktex53_LDFLAGS = -export-dynamic
+luajitmktex_LDFLAGS = -export-dynamic $(LUAJIT_LDEXTRA)
 
-#luatex_postldadd = libmplibcore.a $(MPFR_LIBS) $(GMP_LIBS) 
-luatex_postldadd = libmplibcore.a 
-luatex_postldadd += $(ZZIPLIB_LIBS) $(LIBPNG_LIBS) $(ZLIB_LIBS) $(HARFBUZZ_LIBS) $(GRAPHITE2_LIBS) 
-luatex_postldadd += $(LDADD) libmputil.a libunilib.a libmd5.a $(lua_socketlibs)
-
-
-luatex_LDADD = libluatex.a libff.a libluamisc.a libluasocket.a libluaffi.a libluapplib.a libluaharfbuzz.a $(LUA_LIBS) $(luatex_postldadd)
-#luatex53_LDADD = liblua53tex.a libff.a liblua53misc.a liblua53socket.a liblua53ffi.a liblua53pplib.a $(LUA_LUA53_LIBS) $(luatex_postldadd)
-luajittex_LDADD = libluajittex.a libff.a libluajitmisc.a libluajitsocket.a libluajitpplib.a libluajitharfbuzz.a $(LUAJIT_LIBS) $(luatex_postldadd)
-
-luatex_depend = $(proglib) $(KPATHSEA_DEPEND) $(LIBPNG_DEPEND) libmputil.a libmd5.a
-luatex_DEPENDENCIES = $(luatex_depend) libluatex.a
-#luatex53_DEPENDENCIES = $(luatex_depend) liblua53tex.a
-luajittex_DEPENDENCIES = $(luatex_depend) libluajittex.a
-
-$(luatex_OBJECTS): libluatex.a
-#$(luatex53_OBJECTS): liblua53tex.a
-$(luajittex_OBJECTS): libluajittex.a
-
-nodist_luatex_SOURCES = $(luatex_sources)
-#nodist_luatex53_SOURCES = $(luatex_sources)
-nodist_luajittex_SOURCES = $(luatex_sources)
+#luamktex_postldadd = libmplibcore.a $(MPFR_LIBS) $(GMP_LIBS) 
+luamktex_postldadd = libmplibcore.a 
+luamktex_postldadd += $(ZZIPLIB_LIBS) $(LIBPNG_LIBS) $(ZLIB_LIBS) $(HARFBUZZ_LIBS) $(GRAPHITE2_LIBS) 
+luamktex_postldadd += $(LDADD) libmputil.a libunilib.a libmd5.a $(lua_socketlibs)
 
 
-luatex_sources = \
+luamktex_LDADD = libluamktex.a libff.a libluamisc.a libluasocket.a libluaffi.a libluapplib.a libluaharfbuzz.a $(LUA_LIBS) $(luamktex_postldadd)
+#luamktex53_LDADD = liblua53mktex.a libff.a liblua53misc.a liblua53socket.a liblua53ffi.a liblua53pplib.a $(LUA_LUA53_LIBS) $(luamktex_postldadd)
+luajitmktex_LDADD = libluajitmktex.a libff.a libluajitmisc.a libluajitsocket.a libluajitpplib.a libluajitharfbuzz.a $(LUAJIT_LIBS) $(luamktex_postldadd)
+
+luamktex_depend = $(proglib) $(KPATHSEA_DEPEND) $(LIBPNG_DEPEND) libmputil.a libmd5.a
+luamktex_DEPENDENCIES = $(luamktex_depend) libluamktex.a
+#luamktex53_DEPENDENCIES = $(luamktex_depend) liblua53mktex.a
+luajitmktex_DEPENDENCIES = $(luamktex_depend) libluajitmktex.a
+
+$(luamktex_OBJECTS): libluamktex.a
+#$(luamktex53_OBJECTS): liblua53mktex.a
+$(luajitmktex_OBJECTS): libluajitmktex.a
+
+nodist_luamktex_SOURCES = $(luamktex_sources)
+#nodist_luamktex53_SOURCES = $(luamktex_sources)
+nodist_luajitmktex_SOURCES = $(luamktex_sources)
+
+
+luamktex_sources = \
 	luatexdir/luatex_svnversion.h \
 	luatexdir/luatex.c \
 	luatexdir/luatex.h \
 	mplibdir/lmplib.c
 
 EXTRA_DIST += \
-	$(luatex_sources) 
+	$(luamktex_sources) 
 
-call_luatex_CPPFLAGS = -DEXEPROG=\"luatex.exe\"
-nodist_call_luatex_SOURCES = callexe.c
-call_luatex_LDADD =
+call_luamktex_CPPFLAGS = -DEXEPROG=\"luamktex.exe\"
+nodist_call_luamktex_SOURCES = callexe.c
+call_luamktex_LDADD =
 
-#call_luatex53_CPPFLAGS = -DEXEPROG=\"luatex53.exe\"
-#nodist_call_luatex53_SOURCES = callexe.c
-#call_luatex53_LDADD =
+#call_luamktex53_CPPFLAGS = -DEXEPROG=\"luamktex53.exe\"
+#nodist_call_luamktex53_SOURCES = callexe.c
+#call_luamktex53_LDADD =
 
-call_luajittex_CPPFLAGS = -DEXEPROG=\"luajittex.exe\"
-nodist_call_luajittex_SOURCES = callexe.c
-call_luajittex_LDADD =
+call_luajitmktex_CPPFLAGS = -DEXEPROG=\"luajitmktex.exe\"
+nodist_call_luajitmktex_SOURCES = callexe.c
+call_luajitmktex_LDADD =
 
-.PHONY: install-luatex-links uninstall-luatex-links
-.PHONY: install-luajittex-links uninstall-luajittex-links
-
+.PHONY: install-luamktex-links uninstall-luamktex-links
+.PHONY: install-luajitmktex-links uninstall-luajitmktex-links
 if WIN32
 if MINGW32
-install-luatex-links: .libs/luatex$(EXEEXT)
-	$(INSTALL_PROGRAM) .libs/luatex$(EXEEXT) $(DESTDIR)$(bindir)/texlua$(EXEEXT)
-	$(INSTALL_PROGRAM) .libs/luatex$(EXEEXT) $(DESTDIR)$(bindir)/texluac$(EXEEXT)
-uninstall-luatex-links:
-	rm -f $(DESTDIR)$(bindir)/texlua$(EXEEXT)
-	rm -f $(DESTDIR)$(bindir)/texluac$(EXEEXT)
-install-luajittex-links: .libs/luajittex$(EXEEXT)
-	$(INSTALL_PROGRAM) .libs/luajittex$(EXEEXT) $(DESTDIR)$(bindir)/texluajit$(EXEEXT)
-	$(INSTALL_PROGRAM) .libs/luajittex$(EXEEXT) $(DESTDIR)$(bindir)/texluajitc$(EXEEXT)
-uninstall-luajittex-links:
-	rm -f $(DESTDIR)$(bindir)/texluajit$(EXEEXT)
-	rm -f $(DESTDIR)$(bindir)/texluajitc$(EXEEXT)
+install-luamktex-links: call_luamktex$(EXEEXT)
+	$(INSTALL_PROGRAM) call_luamktex$(EXEEXT) $(DESTDIR)$(bindir)/texmklua$(EXEEXT)
+	$(INSTALL_PROGRAM) call_luamktex$(EXEEXT) $(DESTDIR)$(bindir)/texmkluac$(EXEEXT)
+uninstall-luamktex-links:
+	rm -f $(DESTDIR)$(bindir)/texmklua$(EXEEXT)
+	rm -f $(DESTDIR)$(bindir)/texmkluac$(EXEEXT)
+install-luajitmktex-links: .libs/luajittex$(EXEEXT)
+	$(INSTALL_PROGRAM) .libs/luajitmktex$(EXEEXT) $(DESTDIR)$(bindir)/texmkluajit$(EXEEXT)
+	$(INSTALL_PROGRAM) .libs/luajitmktex$(EXEEXT) $(DESTDIR)$(bindir)/texmkluajitc$(EXEEXT)
+uninstall-luajitmktex-links:
+	rm -f $(DESTDIR)$(bindir)/texmkluajit$(EXEEXT)
+	rm -f $(DESTDIR)$(bindir)/texmkluajitc$(EXEEXT)
 else !MINGW32
-install-luatex-links: call_luatex$(EXEEXT)
-	$(INSTALL_PROGRAM) call_luatex$(EXEEXT) $(DESTDIR)$(bindir)/texlua$(EXEEXT)
-	$(INSTALL_PROGRAM) call_luatex$(EXEEXT) $(DESTDIR)$(bindir)/texluac$(EXEEXT)
-uninstall-luatex-links:
-	rm -f $(DESTDIR)$(bindir)/texlua$(EXEEXT)
-	rm -f $(DESTDIR)$(bindir)/texluac$(EXEEXT)
-install-luajittex-links: call_luajittex$(EXEEXT)
-	$(INSTALL_PROGRAM) call_luajittex$(EXEEXT) $(DESTDIR)$(bindir)/texluajit$(EXEEXT)
-	$(INSTALL_PROGRAM) call_luajittex$(EXEEXT) $(DESTDIR)$(bindir)/texluajitc$(EXEEXT)
-uninstall-luajittex-links:
-	rm -f $(DESTDIR)$(bindir)/texluajit$(EXEEXT)
-	rm -f $(DESTDIR)$(bindir)/texluajitc$(EXEEXT)
+install-luamktex-links: call_luamktex$(EXEEXT)
+	$(INSTALL_PROGRAM) call_luamktex$(EXEEXT) $(DESTDIR)$(bindir)/texmklua$(EXEEXT)
+	$(INSTALL_PROGRAM) call_luamktex$(EXEEXT) $(DESTDIR)$(bindir)/texmkluac$(EXEEXT)
+uninstall-luamktex-links:
+	rm -f $(DESTDIR)$(bindir)/texmklua$(EXEEXT)
+	rm -f $(DESTDIR)$(bindir)/texmkluac$(EXEEXT)
+install-luajitmktex-links: call_luajitmktex$(EXEEXT)
+	$(INSTALL_PROGRAM) call_luajitmktex$(EXEEXT) $(DESTDIR)$(bindir)/texmkluajit$(EXEEXT)
+	$(INSTALL_PROGRAM) call_luajitmktex$(EXEEXT) $(DESTDIR)$(bindir)/texmkluajitc$(EXEEXT)
+uninstall-luajitmktex-links:
+	rm -f $(DESTDIR)$(bindir)/texmkluajit$(EXEEXT)
+	rm -f $(DESTDIR)$(bindir)/texmkluajitc$(EXEEXT)
 endif !MINGW32
 endif WIN32
 
-# LuaTeX/LuaJITTeX Tests
+# LuaMKTeX/LuaJITMKTeX Tests
 #
-luatex_tests = luatexdir/luatex.test luatexdir/luaimage.test
-luatexdir/luatex.log luatexdir/luaimage.log: luatex$(EXEEXT)
-#luatex53_tests = luatexdir/luatex.test luatexdir/luaimage.test
-#luatexdir/luatex53.log luatexdir/luaimage53.log: luatex53$(EXEEXT)
+luamktex_tests = luatexdir/luatex.test luatexdir/luaimage.test
+luatexdir/luatex.log luatexdir/luaimage.log: luamktex$(EXEEXT)
+#luamktex53_tests = luatexdir/luatex.test luatexdir/luaimage.test
+#luatexdir/luatex53.log luatexdir/luaimage53.log: luamktex53$(EXEEXT)
 
 
-luajittex_tests = luatexdir/luajittex.test luatexdir/luajitimage.test
-luatexdir/luajittex.log luatexdir/luajitimage.log: luajittex$(EXEEXT)
+luajitmktex_tests = luatexdir/luajittex.test luatexdir/luajitimage.test
+luatexdir/luajittex.log luatexdir/luajitimage.log: luajitmktex$(EXEEXT)
 
-EXTRA_DIST += $(luatex_tests) $(luajittex_tests)
+EXTRA_DIST += $(luamktex_tests) $(luajitmktex_tests)
 
-if LUATEX
-TESTS += $(luatex_tests)
-endif LUATEX
-#if LUATEX53
-#TESTS += $(luatex_tests)
-#endif LUATEX53
-if LUAJITTEX
-TESTS += $(luajittex_tests)
-endif LUAJITTEX
+if LUAMKTEX
+TESTS += $(luamktex_tests)
+endif LUAMKTEX
+#if LUAMKTEX53
+#TESTS += $(luamktex_tests)
+#endif LUAMKTEX53
+if LUAJITMKTEX
+TESTS += $(luajitmktex_tests)
+endif LUAJITMKTEX
 
 ## luaimage.test/luajitimage.test
 EXTRA_DIST += luatexdir/tests/luaimage.tex \
